--- a/app/views/psd-revised-flow/products-2-products.html
+++ b/app/views/psd-revised-flow/products-2-products.html
@@ -38,17 +38,20 @@
 
         <ul class="govuk-list opss-left-nav">
             <li>
-                <a href="/psd-revised-flow/case-trading-stds-landing.html" class="govuk-link govuk-link--no-visited-state">
-                    Case
-                </a>
+                <a href="/psd-revised-flow/case-trading-stds-landing.html" class="govuk-link govuk-link--no-visited-state">Case</a>
             </li>
             <li class="opss-left-nav__active">
-                <a href="#page-content" class="govuk-link govuk-link--no-visited-state" aria-current="page">Products <span>(1)</span></a>
+                <a href="#page-content" class="govuk-link govuk-link--no-visited-state" aria-current="page">Products <span>(2)</span></a>
 
                 <ul class="govuk-list">
                     <li>
                         <a href="#prod-1" class="govuk-link govuk-link--no-visited-state">
                             Asda dishwashing liquid
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#prod-2" class="govuk-link govuk-link--no-visited-state">
+                            Asda window cleaner
                         </a>
                     </li>
                 </ul>
@@ -65,7 +68,7 @@
                 </ul>
             </li>
             <li>
-                <a href="/psd-revised-flow/images.html" class="govuk-link govuk-link--no-visited-state">Images <span>(7)</span></a>
+                <a href="/psd-revised-flow/images.html" class="govuk-link govuk-link--no-visited-state">Images <span>(3)</span></a>
             </li>
             <li>
                 <a href="/psd-revised-flow/supporting-information.html" class="govuk-link govuk-link--no-visited-state">Supporting information <span>(9)</span></a>
@@ -114,11 +117,7 @@
                                     Lorem ipsum eppiciti
                                 </a>
                             </dd>
-                            <!--dd class="govuk-summary-list__actions">
-                                <a href="#" class="govuk-link govuk-link--no-visited-state">
-                                    Contact<span class="govuk-visually-hidden"> the product's record owner</span>
-                                </a>
-                            </dd-->
+
                         </div>
                     </dl>  
 
@@ -309,7 +308,225 @@
     
         </section>
 
-        <!-- HR here followed by next section for next product - see, producgts-2-products.html -->
+        <hr class="govuk-section-break govuk-section-break--xl govuk-section-break--visible">
+
+        <section>
+
+            <div class="govuk-grid-row">
+                <div class="govuk-grid-column-three-quarters">
+                    <h3 id="prod-2" class="govuk-heading-m">Asda window cleaner</h3>
+                </div>
+                <div class="govuk-grid-column-one-quarter">
+                    <div class="opss-text-align-right opss-margin-bottom-1-desktop">
+                        <a href="/psd-revised-flow/product-page.html" class="govuk-link govuk-link--no-visited-state govuk-!-font-size-19 opss-text-underline-offset">
+                            Edit this <span class="govuk-visually-hidden">Asda window cleaner </span>product
+                        </a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="govuk-grid-row">
+                <div class="govuk-grid-column-two-thirds">
+
+                    <dl class="govuk-summary-list govuk-summary-list--no-border govuk-!-margin-bottom-4 opss-summary-list-mixed opss-summary-list-mixed--compact"> <!-- opss-summary-list-mixed--sm -->
+                        <div class="govuk-summary-list__row">
+                            <dt class="govuk-summary-list__key">Last updated</dt>
+                            <dd class="govuk-summary-list__value">About 1 hour ago</dd>
+                        </div>
+                        <div class="govuk-summary-list__row">
+                            <dt class="govuk-summary-list__key">Created</dt>
+                            <dd class="govuk-summary-list__value">3 October 2021</dd>
+                        </div>
+                        <div class="govuk-summary-list__row">
+                            <dt class="govuk-summary-list__key">Product record owner</dt>
+                            <dd class="govuk-summary-list__value">
+                                <a href="#" class="govuk-link govuk-link--no-visited-state">
+                                    Ipsum eppiciti lorem 
+                                </a>
+                            </dd>
+
+                        </div>
+                    </dl>  
+
+                </div>
+                <div class="govuk-grid-column-one-third">
+
+                    <figure class="opss-margin-bottom-1-desktop">
+                        <img src="../public/images/asda-window-cleaner.png" class="opss-details-img opss-details-img--thumbnail opss-float-right-desktop" alt="Lorem ipsum etite">
+                        <figcaption class="govuk-visually-hidden">Image title here</figcaption>
+                    </figure>
+
+                </div>
+            </div>
+            
+            <div class="govuk-tabs opss-tabs opss-tabs--min-height-m" data-module="govuk-tabs">
+                <h3 class="govuk-tabs__title">
+                  Information related to this <abbr>PSD</abbr> product record
+                </h3>
+                
+                <ul class="govuk-tabs__list">
+                  <li class="govuk-tabs__list-item govuk-tabs__list-item--selected">
+                    <a class="govuk-tabs__tab" href="#product-tab-2">
+                      Details
+                    </a>
+                  </li>
+                  <li class="govuk-tabs__list-item">
+                    <a class="govuk-tabs__tab" href="#images-tab-2">
+                      Images
+                    </a>
+                  </li>
+                  <li class="govuk-tabs__list-item">
+                    <a class="govuk-tabs__tab" href="#attachments-tab-2">
+                      Attachments
+                    </a>
+                  </li>
+                  <li class="govuk-tabs__list-item">
+                    <a class="govuk-tabs__tab" href="#cases-tab-2">
+                      Cases
+                    </a>
+                  </li>
+                </ul>
+
+                <div class="govuk-tabs__panel govuk-!-padding-bottom-2" id="product-tab-2">
+                    <h4 class="govuk-heading-m">Product details</h4>
+
+                    <dl class="govuk-summary-list">
+                        <div class="govuk-summary-list__row">
+                            <dt class="govuk-summary-list__key">
+                                <abbr title="Product Safety Database">PSD</abbr> <span title="reference">ref</span>   
+                            </dt>
+                            <dd class="govuk-summary-list__value">
+                                psd-122 
+                                <span class="govuk-!-font-size-16 govuk-!-padding-left-2 opss-secondary-text">
+                                    <span class="govuk-visually-hidden"> - </span>The <abbr>PSD</abbr> reference for this product record
+                                </span>
+                            </dd>
+                        </div>
+                        <div class="govuk-summary-list__row">
+                            <dt class="govuk-summary-list__key">
+                                Category
+                            </dt>
+                            <dd class="govuk-summary-list__value">
+                                Temporibus doloremque 
+                            </dd>
+                        </div>
+                        <div class="govuk-summary-list__row">
+                            <dt class="govuk-summary-list__key">
+                                Subcategory
+                            </dt>
+                            <dd class="govuk-summary-list__value">
+                                Lorem ipsum dolor elit
+                            </dd>
+                        </div>
+                        <div class="govuk-summary-list__row">
+                            <dt class="govuk-summary-list__key">
+                                Barcode
+                            </dt>
+                            <dd class="govuk-summary-list__value">
+                                664996-7676323
+                            </dd>
+                        </div>                  
+                        <div class="govuk-summary-list__row">
+                            <dt class="govuk-summary-list__key">
+                                Brand
+                            </dt>
+                            <dd class="govuk-summary-list__value">
+                                Asda
+                            </dd>
+                        </div>
+                        <div class="govuk-summary-list__row">
+                            <dt class="govuk-summary-list__key">
+                                Description
+                            </dt>
+                            <dd class="govuk-summary-list__value">
+                                Lorem ipsum quia possimus minus nam quo minima inventore impedit quaerat architecto veniam iusto, similique ratione voluptatibus molestias iste ipsa ea reiciendis fuga odio.
+                            </dd>
+                        </div>
+                        <div class="govuk-summary-list__row">
+                            <dt class="govuk-summary-list__key">
+                                Webpage
+                            </dt>
+                            <dd class="govuk-summary-list__value">
+
+                            </dd>
+                        </div>       
+                        <div class="govuk-summary-list__row">
+                            <dt class="govuk-summary-list__key">
+                                Market date 
+                            </dt>
+                            <dd class="govuk-summary-list__value">
+
+                            </dd>
+                        </div>                              
+                        <div class="govuk-summary-list__row">
+                            <dt class="govuk-summary-list__key">
+                                Country of origin
+                            </dt>
+                            <dd class="govuk-summary-list__value">
+                                China
+                            </dd>
+                        </div>
+                        <div class="govuk-summary-list__row">
+                            <dt class="govuk-summary-list__key">
+                                Product authenticity
+                            </dt>
+                            <dd class="govuk-summary-list__value">
+                                
+                            </dd>
+                        </div>
+                        <div class="govuk-summary-list__row">
+                            <dt class="govuk-summary-list__key">
+                                Product marking 
+                            </dt>
+                            <dd class="govuk-summary-list__value">
+                                Unknown
+                            </dd>
+                        </div> 
+                        <div class="govuk-summary-list__row">
+                            <dt class="govuk-summary-list__key opss-border-none">
+                                Other product identifiers
+                            </dt>
+                            <dd class="govuk-summary-list__value opss-border-none">
+                                
+                            </dd>
+                        </div>
+                    </dl>
+                    
+                    <!-- only show this next line if the user is the product owner (or same team) -->
+                    <p class="govuk-body-s govuk-!-margin-bottom-1 opss-secondary-text opss-text-align-right">
+                        To edit the details for this product go to the full <a href="/psd-revised-flow/product-page.html" class="govuk-link govuk-link--no-visited-state"><span class="govuk-visually-hidden">Asda window cleaner </span>product record page</a>
+                    </p>
+              
+                </div>
+
+                <div class="govuk-tabs__panel govuk-tabs__panel--hidden govuk-!-padding-bottom-2" id="images-tab-2">
+                    <h4 class="govuk-heading-m">Product images</h4>
+                  
+
+
+                    <p class="govuk-body-s govuk-!-margin-bottom-1 opss-secondary-text opss-text-align-right">
+                        To edit the images for this product go to the full <a href="/psd-revised-flow/product-page.html" class="govuk-link govuk-link--no-visited-state">product record page <span class="govuk-visually-hidden">to access its images</span></a>
+                    </p>
+              
+                </div>
+
+                <div class="govuk-tabs__panel govuk-tabs__panel--hidden govuk-!-padding-bottom-2" id="attachments-tab-2">
+                    <h4 class="govuk-heading-m">Product attachements</h4>
+
+                    <p class="govuk-body-s govuk-!-margin-bottom-1 opss-secondary-text opss-text-align-right">
+                        To add or remove attachments for this product go to the full <a href="/psd-revised-flow/product-page.html" class="govuk-link govuk-link--no-visited-state">product record page <span class="govuk-visually-hidden">to access its attachements</span></a>
+                    </p>                  
+              
+                </div>
+                <div class="govuk-tabs__panel govuk-tabs__panel--hidden govuk-!-padding-bottom-2" id="cases-tab-2">
+                    <h4 class="govuk-heading-m">Related cases</h4>
+                    <p class="govuk-body opss-secondary-text govuk-!-margin-bottom-7">This product record is linked to these open cases.</p>
+
+              
+                </div>
+            </div>
+    
+        </section>        
 
     </section>
 </div>
