--- a/app/views/psd-revised-flow/risk-level.html
+++ b/app/views/psd-revised-flow/risk-level.html
@@ -54,7 +54,15 @@
                 <a href="products.html" class="govuk-link govuk-link--no-visited-state">Products <span>(2)</span></a>
             </li>
             <li>
-                <a href="#" class="govuk-link govuk-link--no-visited-state">Businesses <span>(2)</span></a>
+                <a href="#" class="govuk-link govuk-link--no-visited-state">Businesses <span>(1)</span></a>
+
+                <ul class="govuk-list">
+                    <li>
+                        <a href="#biz-1" class="govuk-link govuk-link--no-visited-state">
+                            Smith and sons Ltd
+                        </a>
+                    </li>
+                </ul>
             </li>
             <li>
                 <a href="#" class="govuk-link govuk-link--no-visited-state">Images <span>(7)</span></a>
