index pg changes

--- a/app/views/layout.html
+++ b/app/views/layout.html
@@ -42,7 +42,7 @@
   {# Set serviceName in config.js. #}
   {{ govukHeader({
     homepageUrl: "/",
-    serviceName: serviceName,
+    serviceName: "UX/UI design page prototype",
     serviceUrl: "/",
     containerClasses: "govuk-width-container"
   }) }}
