--- a/app/views/psd-revised-flow/index.html
+++ b/app/views/psd-revised-flow/index.html
@@ -80,7 +80,8 @@
                 </li>
 
                 <li>
-                    <a class="govuk-link govuk-link--no-visited-state" href="/psd-revised-flow/products.html" target="_blank">Trading Standards - PRODUCTS page</a>
+                    <a class="govuk-link govuk-link--no-visited-state" href="/psd-revised-flow/products.html" target="_blank">Trading Standards - PRODUCTS page</a> 
+                    <i>"Edit this product" only appears if you own the product or it has no owner.</i>
                     
                     <ul class="govuk-list govuk-list--bullet">
                         <li>
