--- a/app/views/psd-revised-flow/products-2-products.html
+++ b/app/views/psd-revised-flow/products-2-products.html
@@ -291,16 +291,16 @@
                 </div>
 
                 <div class="govuk-tabs__panel govuk-tabs__panel--hidden govuk-!-padding-bottom-2" id="attachments-tab-1">
-                    <h4 class="govuk-heading-m">Product attachements</h4>
+                    <h4 class="govuk-heading-m">Product attachments</h4>
 
                     <p class="govuk-body-s govuk-!-margin-bottom-1 opss-secondary-text opss-text-align-right">
-                        To add or remove attachments for this product go to the full <a href="/psd-revised-flow/product-page.html" class="govuk-link govuk-link--no-visited-state">product record page <span class="govuk-visually-hidden">to access its attachements</span></a>
+                        To add or remove attachments for this product go to the full <a href="/psd-revised-flow/product-page.html" class="govuk-link govuk-link--no-visited-state">product record page <span class="govuk-visually-hidden">to access its attachments</span></a>
                     </p>                  
               
                 </div>
                 <div class="govuk-tabs__panel govuk-tabs__panel--hidden govuk-!-padding-bottom-2" id="cases-tab-1">
                     <h4 class="govuk-heading-m">Related cases</h4>
-                    <p class="govuk-body opss-secondary-text govuk-!-margin-bottom-7">This product record is linked to these open cases.</p>
+                    <p class="govuk-body opss-secondary-text govuk-!-margin-bottom-7">This product record is linked to these cases.</p>
 
               
                 </div>
@@ -331,17 +331,17 @@
                     <dl class="govuk-summary-list govuk-summary-list--no-border govuk-!-margin-bottom-4 opss-summary-list-mixed opss-summary-list-mixed--compact"> <!-- opss-summary-list-mixed--sm -->
                         <div class="govuk-summary-list__row">
                             <dt class="govuk-summary-list__key">Last updated</dt>
-                            <dd class="govuk-summary-list__value">About 1 hour ago</dd>
+                            <dd class="govuk-summary-list__value">23 October 2020</dd>
                         </div>
                         <div class="govuk-summary-list__row">
                             <dt class="govuk-summary-list__key">Created</dt>
-                            <dd class="govuk-summary-list__value">3 October 2021</dd>
+                            <dd class="govuk-summary-list__value">16 September 2020</dd>
                         </div>
                         <div class="govuk-summary-list__row">
                             <dt class="govuk-summary-list__key">Product record owner</dt>
                             <dd class="govuk-summary-list__value">
-                                <a href="#" class="govuk-link govuk-link--no-visited-state">
-                                    Ipsum eppiciti lorem 
+                                <a href="/psd-revised-flow/no-product-owner.html" class="govuk-link govuk-link--no-visited-state">
+                                    There is no product owner
                                 </a>
                             </dd>
 
@@ -511,16 +511,16 @@
                 </div>
 
                 <div class="govuk-tabs__panel govuk-tabs__panel--hidden govuk-!-padding-bottom-2" id="attachments-tab-2">
-                    <h4 class="govuk-heading-m">Product attachements</h4>
+                    <h4 class="govuk-heading-m">Product attachments</h4>
 
                     <p class="govuk-body-s govuk-!-margin-bottom-1 opss-secondary-text opss-text-align-right">
-                        To add or remove attachments for this product go to the full <a href="/psd-revised-flow/product-page.html" class="govuk-link govuk-link--no-visited-state">product record page <span class="govuk-visually-hidden">to access its attachements</span></a>
+                        To add or remove attachments for this product go to the full <a href="/psd-revised-flow/product-page.html" class="govuk-link govuk-link--no-visited-state">product record page <span class="govuk-visually-hidden">to access its attachments</span></a>
                     </p>                  
               
                 </div>
                 <div class="govuk-tabs__panel govuk-tabs__panel--hidden govuk-!-padding-bottom-2" id="cases-tab-2">
                     <h4 class="govuk-heading-m">Related cases</h4>
-                    <p class="govuk-body opss-secondary-text govuk-!-margin-bottom-7">This product record is linked to these open cases.</p>
+                    <p class="govuk-body opss-secondary-text govuk-!-margin-bottom-7">This product record is linked to these cases.</p>
 
               
                 </div>
