--- a/app/views/psd-revised-flow/case-opss-landing.html
+++ b/app/views/psd-revised-flow/case-opss-landing.html
@@ -284,27 +284,27 @@
         <dl class="govuk-summary-list opss-summary-list-mixed opss-summary-list-mixed--narrow-dt">
             <div class="govuk-summary-list__row">
                 <dt class="govuk-summary-list__key">
-                    Batch number
+                    Batch numbers
                 </dt>
                 <dd class="govuk-summary-list__value">
                     B2669-233 
                 </dd>
                 <dd class="govuk-summary-list__actions">
                     <a href="#" class="govuk-link govuk-link--no-visited-state">
-                        Edit<span class="govuk-visually-hidden"> the batch number</span>
+                        Edit<span class="govuk-visually-hidden"> the Batch numbers</span>
                     </a>
                 </dd>                
             </div>  
             <div class="govuk-summary-list__row">
                 <dt class="govuk-summary-list__key">
-                    Customs code
+                    Customs codes
                 </dt>
                 <dd class="govuk-summary-list__value">
                     
                 </dd>
                 <dd class="govuk-summary-list__actions">
                     <a href="#" class="govuk-link govuk-link--no-visited-state">
-                        Edit<span class="govuk-visually-hidden"> the customs code</span>
+                        Edit<span class="govuk-visually-hidden"> the Customs codes</span>
                     </a>
                 </dd>                
             </div>
