--- a/app/views/psd-revised-flow/case-trading-stds-landing-non-admin.html
+++ b/app/views/psd-revised-flow/case-trading-stds-landing-non-admin.html
@@ -89,7 +89,7 @@
                     Reference <span class="opss-numero" title="Number">&numero;</span>
                 </dt>
                 <dd class="govuk-summary-list__value">
-                    12345_ts300 <span class="govuk-!-font-size-16 govuk-!-padding-left-2 opss-secondary-text">Trading standards reference</span>
+                    12345300 <span class="govuk-!-font-size-16 govuk-!-padding-left-2 opss-secondary-text">Trading standards reference</span>
                 </dd>
             </div>
             <div class="govuk-summary-list__row">
