--- a/app/views/psd-revised-flow/products.html
+++ b/app/views/psd-revised-flow/products.html
@@ -283,7 +283,7 @@
                 <div class="govuk-tabs__panel govuk-tabs__panel--hidden govuk-!-padding-bottom-2" id="images-tab-1">
                     <h4 class="govuk-heading-m">Product images</h4>
                   
-
+                    <p class="govuk-body opss-secondary-text govuk-!-margin-bottom-7">These are the product images - they <strong>are not</strong> the case evidence images.</p>
 
                     <p class="govuk-body-s govuk-!-margin-bottom-1 opss-secondary-text opss-text-align-right">
                         To edit the images for this product go to the full <a href="/psd-revised-flow/product-page.html" class="govuk-link govuk-link--no-visited-state">product record page <span class="govuk-visually-hidden">to access its images</span></a>
