--- a/app/views/psd-revised-flow/case-trading-stds-landing.html
+++ b/app/views/psd-revised-flow/case-trading-stds-landing.html
@@ -288,7 +288,7 @@
         </dl>
 
         <h3 id="product-info-1" class="govuk-heading-m govuk-!-margin-top-9">
-            Case related product information
+            Case specific product information
         </h3>
 
         <h4 class="govuk-body govuk-!-font-weight-regular govuk-!-margin-bottom-1 opss-secondary-text">Asda washing up liquid</h4>
