--- a/app/views/psd-revised-flow/inc_left_nav_1.html
+++ b/app/views/psd-revised-flow/inc_left_nav_1.html
@@ -10,7 +10,7 @@
                     </li>
                     <li>
                         <a href="#product-info-1" class="govuk-link govuk-link--no-visited-state">
-                            Case related product information
+                            Case specific product information
                         </a>
                     </li>                    
                 </ul>
@@ -28,6 +28,9 @@
                 <a href="/psd-revised-flow/supporting-information.html" class="govuk-link govuk-link--no-visited-state">Supporting information <span>(9)</span></a>
             </li>
             <li>
-                <a href="/psd-revised-flow/activity.html" class="govuk-link govuk-link--no-visited-state">Activity</a>  <!-- have add comment on this page -->
+                <a href="/psd-revised-flow/activity.html" class="govuk-link govuk-link--no-visited-state">Activity</a>  
             </li>
+            <li>
+                <a href="/psd-revised-flow/admin.html" class="govuk-link govuk-link--no-visited-state">Case admin</a>  
+            </li>            
         </ul>
