--- a/app/views/psd-revised-flow/inc_left_nav_1_empty.html
+++ b/app/views/psd-revised-flow/inc_left_nav_1_empty.html
@@ -10,7 +10,7 @@
                     </li>
                     <li>
                         <a href="#product-info-1" class="govuk-link govuk-link--no-visited-state">
-                            Case related product information
+                            Case specific product information
                         </a>
                     </li>                    
                 </ul>
