--- a/app/views/psd-revised-flow/products-2-products.html
+++ b/app/views/psd-revised-flow/products-2-products.html
@@ -139,26 +139,26 @@
                 </h3>
                 
                 <ul class="govuk-tabs__list">
-                  <li class="govuk-tabs__list-item govuk-tabs__list-item--selected">
-                    <a class="govuk-tabs__tab" href="#product-tab-1">
-                      Details
-                    </a>
-                  </li>
-                  <li class="govuk-tabs__list-item">
-                    <a class="govuk-tabs__tab" href="#images-tab-1">
-                      Images
-                    </a>
-                  </li>
-                  <li class="govuk-tabs__list-item">
-                    <a class="govuk-tabs__tab" href="#attachments-tab-1">
-                      Attachments
-                    </a>
-                  </li>
-                  <li class="govuk-tabs__list-item">
-                    <a class="govuk-tabs__tab" href="#cases-tab-1">
-                      Cases
-                    </a>
-                  </li>
+                    <li class="govuk-tabs__list-item govuk-tabs__list-item--selected">
+                      <a class="govuk-tabs__tab" href="#product-tab-1">
+                        Details
+                      </a>
+                    </li>
+                    <li class="govuk-tabs__list-item">
+                      <a class="govuk-tabs__tab" href="#images-tab-1">
+                        Images <span class="govuk-!-font-size-16">(3)</span>
+                      </a>
+                    </li>
+                    <li class="govuk-tabs__list-item">
+                      <a class="govuk-tabs__tab" href="#attachments-tab-1">
+                        Attachments <span class="govuk-!-font-size-16">(2)</span>
+                      </a>
+                    </li>
+                    <li class="govuk-tabs__list-item">
+                      <a class="govuk-tabs__tab" href="#cases-tab-1">
+                        Cases <span class="govuk-!-font-size-16">(4)</span>
+                      </a>
+                    </li>
                 </ul>
 
                 <div class="govuk-tabs__panel govuk-!-padding-bottom-2" id="product-tab-1">
@@ -343,7 +343,7 @@
                             <dt class="govuk-summary-list__key">Product record owner</dt>
                             <dd class="govuk-summary-list__value">
                                 <a href="/psd-revised-flow/no-product-owner.html" class="govuk-link govuk-link--no-visited-state">
-                                    There is no product owner
+                                    There is no owner
                                 </a>
                             </dd>
 
@@ -374,17 +374,17 @@
                   </li>
                   <li class="govuk-tabs__list-item">
                     <a class="govuk-tabs__tab" href="#images-tab-2">
-                      Images
+                      Images <span class="govuk-!-font-size-16">(2)</span>
                     </a>
                   </li>
                   <li class="govuk-tabs__list-item">
                     <a class="govuk-tabs__tab" href="#attachments-tab-2">
-                      Attachments
+                      Attachments <span class="govuk-!-font-size-16">(1)</span>
                     </a>
                   </li>
                   <li class="govuk-tabs__list-item">
                     <a class="govuk-tabs__tab" href="#cases-tab-2">
-                      Cases
+                      Cases <span class="govuk-!-font-size-16">(2)</span>
                     </a>
                   </li>
                 </ul>
