--- a/app/views/psd-revised-flow/products.html
+++ b/app/views/psd-revised-flow/products.html
@@ -147,17 +147,17 @@
                   </li>
                   <li class="govuk-tabs__list-item">
                     <a class="govuk-tabs__tab" href="#images-tab-1">
-                      Images
+                      Images <span class="govuk-!-font-size-16">(3)</span>
                     </a>
                   </li>
                   <li class="govuk-tabs__list-item">
                     <a class="govuk-tabs__tab" href="#attachments-tab-1">
-                      Attachments
+                      Attachments <span class="govuk-!-font-size-16">(2)</span>
                     </a>
                   </li>
                   <li class="govuk-tabs__list-item">
                     <a class="govuk-tabs__tab" href="#cases-tab-1">
-                      Cases
+                      Cases <span class="govuk-!-font-size-16">(4)</span>
                     </a>
                   </li>
                 </ul>
