--- a/app/views/psd-revised-flow/case-opss-landing-team-not-added-to-case.html
+++ b/app/views/psd-revised-flow/case-opss-landing-team-not-added-to-case.html
@@ -1,7 +1,7 @@
 {% extends "layout-01.html" %}
 
 {% block pageTitle %}
-    Case landing page - Trading Stds - different team
+    Case landing page - OPSS - admin
 {% endblock %}
 
 
@@ -19,13 +19,14 @@
     </div>
     <div class="govuk-grid-column-one-quarter govuk-!-margin-bottom-4">
         <div class="opss-text-align-right">
-            <a href="activity.html" class="govuk-link govuk-link--no-visited-state govuk-!-font-size-19 opss-text-underline-offset">
-                Add a comment
-            </a>
+            <a href="close-case.html" class="govuk-link govuk-link--no-visited-state govuk-!-font-size-19 opss-text-underline-offset">
+                Close case
+            </a><!-- or, Re-open case -->
         </div>
     </div>
-
 </div>
+
+
 
 <div class="govuk-grid-row">
     <nav class="govuk-grid-column-one-quarter govuk-!-padding-right-0">
@@ -34,22 +35,14 @@
             Skip to the main content
         </a>
 
-        {% include "psd-revised-flow/inc_left_nav_1.html" %}
+        {% include "psd-revised-flow/inc_left_nav_1_opss.html" %}
     </nav>
 
     <section id="page-content" role="region" class="govuk-grid-column-three-quarters">
 
         <h2 class="govuk-heading-m govuk-!-margin-top-1 govuk-visually-hidden">Case overview</h2>
-<!--
-        <div class="govuk-warning-text">
-            <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
-            <strong class="govuk-warning-text__text">
-                <span class="govuk-warning-text__assistive">Warning</span>
-                0 products have been added to this case.
-            </strong>
-        </div>
--->
-        <dl class="govuk-summary-list opss-summary-list-mixed opss-summary-list-mixed--narrow-dt">
+
+        <dl class="govuk-summary-list">
             <div class="govuk-summary-list__row">
                 <dt class="govuk-summary-list__key">
                     Case name
@@ -60,18 +53,10 @@
             </div>
             <div class="govuk-summary-list__row">
                 <dt class="govuk-summary-list__key">
-                    Allegation
+                    Allegation   <!-- or Enquiry / Project -->
                 </dt>
                 <dd class="govuk-summary-list__value">
                     2101-0008
-                </dd>
-            </div>
-            <div class="govuk-summary-list__row">
-                <dt class="govuk-summary-list__key">
-                    Reference <span class="opss-numero" title="Number">&numero;</span>
-                </dt>
-                <dd class="govuk-summary-list__value">
-                    12345300 <span class="govuk-!-font-size-16 govuk-!-padding-left-2 opss-secondary-text">Trading standards reference</span>
                 </dd>
             </div>
             <div class="govuk-summary-list__row">
@@ -87,8 +72,7 @@
                     Summary
                 </dt>
                 <dd class="govuk-summary-list__value">
-                    Product reported because it is unsafe.
-                    <!-- opss user: what is being alleged, shows here on current service -->
+                    OPSS user: what is being alleged, shows here on current service. Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor vero sunt voluptatum cumque illo voluptates officia quasi. 
                 </dd>
             </div>
             <div class="govuk-summary-list__row opss-summary-list__row--split">
@@ -152,27 +136,18 @@
                 </dt>
                 <dd class="govuk-summary-list__value">
                     Unrestricted
-                    <!-- OR
-                    <span class="opss-tag opss-tag--risk2 opss-tag--lrg"><span class="govuk-visually-hidden">This case is </span>Restricted
-                    -->
                 </dd>
             </div>
             <div class="govuk-summary-list__row">
                 <dt class="govuk-summary-list__key">Case risk level</dt>
                 <dd class="govuk-summary-list__value">
-                    <span class="opss-tag opss-tag--risk1 opss-tag--lrg">
-                        <span class="govuk-visually-hidden">This case is a</span>Serious risk
-                    </span>
+                    Medium risk
 
                     <span class="govuk-!-font-size-16 govuk-!-padding-left-2 opss-secondary-text">
-                        <span class="govuk-visually-hidden"> - </span>Not validated
+                        <span class="govuk-visually-hidden"> - </span>Validated
                     </span>
                 </dd>
             </div>
-            <!--div class="govuk-summary-list__row">
-                <dt class="govuk-summary-list__key">Risk level validated</dt>
-                <dd class="govuk-summary-list__value">No</dd>
-            </div-->
             <div class="govuk-summary-list__row">
                 <dt class="govuk-summary-list__key">
                     COVID-19
@@ -187,7 +162,7 @@
             Safety and compliance
         </h3>
 
-        <dl class="govuk-summary-list opss-summary-list-mixed opss-summary-list-mixed--narrow-dt">
+        <dl class="govuk-summary-list">
             <div class="govuk-summary-list__row">
                 <dt class="govuk-summary-list__key">
                     Reported as
@@ -214,54 +189,15 @@
             </div>
         </dl>
 
-        <h3 id="product-info-1" class="govuk-heading-m govuk-!-margin-top-9">
-            Case specific product information
-        </h3>
+        <section class="govuk-!-margin-top-9 opss-grouping">
+            <h3 id="source" class="govuk-heading-m opss-grouping__heading-m">
+                Case source
+            </h3>
 
-        
+            <p class="govuk-body govuk-!-margin-bottom-1">Only teams added to the case can view case source contact details</p>
+        </section>
 
-        <dl class="govuk-summary-list opss-summary-list-mixed opss-summary-list-mixed--narrow-dt">
-            <div class="govuk-summary-list__row">
-                <dt class="govuk-summary-list__key">
-                    Batch numbers
-                </dt>
-                <dd class="govuk-summary-list__value">
-                    B2669-233 
-                </dd>
-                <dd class="govuk-summary-list__actions">
-                    <a href="#" class="govuk-link govuk-link--no-visited-state">
-                        Edit<span class="govuk-visually-hidden"> the Batch numbers</span>
-                    </a>
-                </dd>                
-            </div>  
-            <div class="govuk-summary-list__row">
-                <dt class="govuk-summary-list__key">
-                    Customs codes
-                </dt>
-                <dd class="govuk-summary-list__value">
-                    
-                </dd>
-                <dd class="govuk-summary-list__actions">
-                    <a href="#" class="govuk-link govuk-link--no-visited-state">
-                        Edit<span class="govuk-visually-hidden"> the Customs codes</span>
-                    </a>
-                </dd>                
-            </div>
-            <div class="govuk-summary-list__row">
-                <dt class="govuk-summary-list__key">
-                    Units affected
-                </dt>
-                <dd class="govuk-summary-list__value">
-                    
-                </dd>
-                <dd class="govuk-summary-list__actions">
-                    <a href="#" class="govuk-link govuk-link--no-visited-state">
-                        Edit<span class="govuk-visually-hidden"> the units affected</span>
-                    </a>
-                </dd>                
-            </div>              
-        </dl>                   
-
+        <p class="govuk-body govuk-!-margin-top-7 govuk-!-margin-bottom-2">Only teams added to the case with editing rights can edit the case.</p>
 
     </section>
 
