--- a/app/views/psd-revised-flow/case-opss-landing.html
+++ b/app/views/psd-revised-flow/case-opss-landing.html
@@ -278,7 +278,7 @@
         </dl>
 <!-- this appears when this information is available and the anchor link appears in the nav 
         <h3 id="product-info-1" class="govuk-heading-m govuk-!-margin-top-9">
-            Case related product information
+            Case specific product information
         </h3>
 
         <dl class="govuk-summary-list opss-summary-list-mixed opss-summary-list-mixed--narrow-dt">
@@ -360,7 +360,7 @@
                 </div>
             </dl>
 
-            <p class="govuk-body-s govuk-!-margin-bottom-1 opss-secondary-text opss-text-align-right">Only teams added to the case can view allegation contact details</p>
+            <p class="govuk-body-s govuk-!-margin-bottom-1 opss-secondary-text opss-text-align-right">Only teams added to the case can view case source contact details</p>
         </section>
 
     </section>
