--- a/app/views/psd-revised-flow/case-trading-stds-landing_warnings.html
+++ b/app/views/psd-revised-flow/case-trading-stds-landing_warnings.html
@@ -47,7 +47,7 @@
             <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
             <strong class="govuk-warning-text__text">
                 <span class="govuk-warning-text__assistive">Warning</span>
-                0 Products, Businesses, or Risk assessments have been added to this case.
+                There are no Products, Businesses, or Risk assessments linked to, or added to, this case.
             </strong>
         </div>
         <!-- if a trading stds user - end -->
@@ -285,7 +285,7 @@
         </dl>
 
         <h3 id="product-info-1" class="govuk-heading-m govuk-!-margin-top-9">
-            Case related product information
+            Case specific product information
         </h3>
 
         <dl class="govuk-summary-list opss-summary-list-mixed opss-summary-list-mixed--narrow-dt">
