various updates - cross tickets

--- a/app/views/cosmetics-general/tasks/index.html
+++ b/app/views/cosmetics-general/tasks/index.html
@@ -136,6 +136,16 @@
                     <br><br>On the current "You cannot notify products containing [name]" page, we need to <b>add a hyperlink</b> which returns the user back to the tasks list page, and this is what they see. (Bruce to provide link to explain why the process was blocked - opens in a new tab).
                 </li>
             </ul>
+            <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
+
+            <p class="govuk-body">Error statement for when a user has reached the final task, but has then 'added' a nanomaterial which is blocked: We can add this to any list of errors...<br><br>
+                [Nanomaterial name] is blocked</p>
+                <ul class="govuk-list govuk-list--bullet">
+                    <li>If no errors exist concerning orphaned nanomaterials, then we do not require this supplementary sentence: "Remove the nanomaterial(s) or include it in an item."</li>
+                    <li>If the "[Nanomaterial name] is blocked" error statement is shown, then we also show this supplementary sentence below the "Remove the nanomaterial(s) ...." sentence: "Blocked nanomaterials can be removed or require notification."</li>
+                    <li>If both types of error message are shown, we show/include both supplementary sentences.</li>
+                </ul>
+                
         </div>
 
         <div class="opss-border-all govuk-!-padding-top-6 govuk-!-padding-right-4 govuk-!-padding-bottom-3 govuk-!-padding-left-5 govuk-!-margin-bottom-8">
