--- a/app/views/psd-revised-flow/case-opss-landing-team-added-to-case.html
+++ b/app/views/psd-revised-flow/case-opss-landing-team-added-to-case.html
@@ -237,7 +237,7 @@
             </dl>
         </section>
 
-        <p class="govuk-body govuk-!-margin-top-7 govuk-!-margin-bottom-2">Only teams added to the case with editing rights can edit the case.</p>
+        <p class="govuk-body-s govuk-!-margin-top-7 govuk-!-margin-bottom-2 opss-secondary-text">Only teams added to the case with editing rights can edit the case.</p>
 
     </section>
 
