--- a/app/views/psd-revised-flow/case-opss-landing-team-not-added-to-case.html
+++ b/app/views/psd-revised-flow/case-opss-landing-team-not-added-to-case.html
@@ -194,10 +194,10 @@
                 Case source
             </h3>
 
-            <p class="govuk-body govuk-!-margin-bottom-1">Only teams added to the case can view case source contact details</p>
+            <p class="govuk-body-s govuk-!-margin-bottom-1 opss-secondary-text opss-text-align-right">Only teams added to the case can view case source contact details</p>
         </section>
 
-        <p class="govuk-body govuk-!-margin-top-7 govuk-!-margin-bottom-2">Only teams added to the case with editing rights can edit the case.</p>
+        <p class="govuk-body-s govuk-!-margin-top-7 govuk-!-margin-bottom-2 opss-secondary-text">Only teams added to the case with editing rights can edit the case.</p>
 
     </section>
 
