--- a/app/views/psd-revised-flow/products-2-products.html
+++ b/app/views/psd-revised-flow/products-2-products.html
@@ -342,9 +342,9 @@
                         <div class="govuk-summary-list__row">
                             <dt class="govuk-summary-list__key">Product record owner</dt>
                             <dd class="govuk-summary-list__value">
-                                <a href="/psd-revised-flow/no-product-owner.html" class="govuk-link govuk-link--no-visited-state">
-                                    There is no owner
-                                </a>
+
+                                    There is no owner. (It is editable)
+
                             </dd>
 
                         </div>
