updates on new cases area pages

--- a/app/views/psd-revised-flow/supporting-information.html
+++ b/app/views/psd-revised-flow/supporting-information.html
@@ -59,7 +59,7 @@
 
 
 <div class="govuk-grid-row">
-    <nav class="govuk-grid-column-one-quarter govuk-!-padding-right-0">
+    <nav class="govuk-grid-column-one-quarter govuk-!-padding-right-0" aria-label="Secondary">
 
         <a href="#page-content" class="govuk-skip-link opss-skip-link">
             Skip to the main content
