--- a/app/views/psd-cases-area/index.html
+++ b/app/views/psd-cases-area/index.html
@@ -37,7 +37,7 @@
                     </h1>
 
                     <p class="govuk-body opss-secondary-text">
-                        'My cases', 'Team cases' and 'All cases search': 3x page designs showing two new pages and all 3 with new left-hand sub-nav.
+                        'My cases', 'Team cases' and 'All cases': 3x page designs showing two new pages and all 3 with new left-hand sub-nav. The user will be able to 'Create a case' from any of the pages.
                     </p>
 
 
@@ -52,14 +52,14 @@
     <div class="govuk-grid-column-full govuk-!-padding-top-7">
         <div class="govuk-!-padding-top-6 govuk-!-padding-right-4 govuk-!-padding-bottom-3 govuk-!-padding-left-5 govuk-!-margin-bottom-8 opss-border-all">
             <h2 class="govuk-heading-s">
-                My cases:
+                1. My cases:
             </h2>
 
-            <p class="govuk-body">When the user selects the "Cases" option from the top level navigation, the user now lands on the "My cases" page.</p>
+            <p class="govuk-body">When the user selects the "Cases" option from the top level navigation, the user now lands on the "My cases" page. <small><i>(This can soon be revised with the addition of an actual Cases landing page).</i></small> The "Cases" active state remains active for all 3 pages. </p>
 
             <ul class="govuk-list govuk-list--bullet govuk-list--spaced">
                 <li>
-                    <a class="govuk-link govuk-link--no-visited-state" href="/psd-cases-area/my-cases.html" target="_blank">My cases </a> 
+                    <a class="govuk-link govuk-link--no-visited-state" href="/psd-cases-area/my-cases.html" target="_blank">My cases</a>
 
                     <ul class="govuk-list govuk-list--bullet">
                         <li>
@@ -70,7 +70,34 @@
                 </li>
             </ul> 
 
-            <p class="govuk-body">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Neque ab maiores repudiandae, modi ea amet temporibus magnam esse cupiditate blanditiis voluptates nostrum doloribus voluptate harum quibusdam non? Iste, dignissimos autem?</p>
+            <h2 class="govuk-heading-s">
+                2. Team cases:
+            </h2>
+
+
+            <h2 class="govuk-heading-s">
+                3. All cases:
+            </h2>  
+            
+            <ul class="govuk-list govuk-list--bullet govuk-list--spaced">
+                <li>
+                    <a class="govuk-link govuk-link--no-visited-state" href="/psd-cases-area/all-cases.html" target="_blank">All cases</a>. This is the current Cases seach page (no change in functionality); updates have been made to the H1 title and 'help' link text and a main hint text added. <small><i>(Keywords moved to new row, margin/padding and input width classes changed, new ID "page-content" added to main section).</i></small>
+                </li>
+            </ul> 
+
+            
+            
+            <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
+
+            <p class="govuk-body">All pages/lists/tables follow the same established logic: 20 items per list, table footers only when there are 12 or more items,pagination when there are 20 or more items, etc. And the logic for the overview statement remains the same but with amended language: e.g, for 'My cases'</p>
+
+            <ul class="govuk-list govuk-list--bullet govuk-list--spaced">
+                <li>
+                    Lorem ipsum 
+                </li>
+            </ul>
+            
+            <p class="govuk-body">The help text second paragraph has been updated, but is the same across all three pages.</p>
 
         </div>
             
