--- a/app/views/psd-revised-flow/risk-level.html
+++ b/app/views/psd-revised-flow/risk-level.html
@@ -40,7 +40,7 @@
 {% include "psd-revised-flow/inc_top_nav.html" %}
 -->
 <div class="govuk-grid-row">
-    <nav class="govuk-grid-column-one-quarter govuk-!-padding-right-0">
+    <nav class="govuk-grid-column-one-quarter govuk-!-padding-right-0" aria-label="Secondary">
 
         <a href="#page-content" class="govuk-skip-link opss-skip-link">
             Skip to the main content
