--- a/app/views/psd-cases-area/all-cases-2.html
+++ b/app/views/psd-cases-area/all-cases-2.html
@@ -77,7 +77,7 @@
 
             <hr class="govuk-section-break govuk-section-break--visible govuk-!-margin-top-6 govuk-!-margin-bottom-6 govuk-!-margin-right-6">
 
-            <h2 class="govuk-heading-m">
+            <h2 class="govuk-heading-s">
                 Filters<span class="govuk-visually-hidden">:</span>
             </h2>
 
@@ -87,7 +87,7 @@
 
             <div class="govuk-form-group opss-form-group opss-form-group--sm-labels">
                 <fieldset class="govuk-fieldset">
-                    <legend class="govuk-fieldset__legend govuk-fieldset__legend--s">
+                    <legend class="govuk-fieldset__legend govuk-fieldset__legend--s govuk-!-font-weight-regular">
                         Case priority
                     </legend>
 
@@ -125,7 +125,7 @@
 
             <div class="govuk-form-group opss-form-group opss-form-group--sm-labels">
                 <fieldset class="govuk-fieldset">
-                    <legend class="govuk-fieldset__legend govuk-fieldset__legend--s">
+                    <legend class="govuk-fieldset__legend govuk-fieldset__legend--s govuk-!-font-weight-regular">
                         Case owner
                     </legend>
 
@@ -232,7 +232,7 @@
 
                     <div class="govuk-form-group opss-form-group opss-form-group--sm-labels">
                         <fieldset class="govuk-fieldset">
-                            <legend class="govuk-fieldset__legend govuk-fieldset__legend--s">
+                            <legend class="govuk-fieldset__legend govuk-fieldset__legend--s govuk-!-font-weight-regular">
                                 Teams added to cases
                             </legend>
 
@@ -297,7 +297,7 @@
 
                     <div class="govuk-form-group opss-form-group opss-form-group--sm-labels">
                         <fieldset class="govuk-fieldset">
-                            <legend class="govuk-fieldset__legend govuk-fieldset__legend--s">
+                            <legend class="govuk-fieldset__legend govuk-fieldset__legend--s govuk-!-font-weight-regular">
                                 Created by
                             </legend>
 
@@ -395,7 +395,7 @@
 
                     <div class="govuk-form-group opss-form-group opss-form-group--sm-labels">
                         <fieldset class="govuk-fieldset">
-                            <legend class="govuk-fieldset__legend govuk-fieldset__legend--s">
+                            <legend class="govuk-fieldset__legend govuk-fieldset__legend--s govuk-!-font-weight-regular">
                                 Case type
                             </legend>
 
@@ -432,7 +432,7 @@
 
                     <div class="govuk-form-group opss-form-group opss-form-group--sm-labels">
                         <fieldset class="govuk-fieldset">
-                            <legend class="govuk-fieldset__legend govuk-fieldset__legend--s">
+                            <legend class="govuk-fieldset__legend govuk-fieldset__legend--s govuk-!-font-weight-regular">
                                 Case status
                             </legend>
 
@@ -488,7 +488,8 @@
         <section class="govuk-grid-column-three-quarters" id="page-content">
 
             <div class="govuk-grid-row">
-                <div class="govuk-grid-column-full">
+                <div class="govuk-grid-column-two-thirds">
+                    
                     <div class="govuk-form-group govuk-!-padding-bottom-5"> <!-- opss-border-bottom -->
 
                         <label class="govuk-label" for="cases-search">
@@ -496,21 +497,16 @@
                         </label>
         
                         <div class="govuk-input__wrapper opss-search__wrapper">
-                            <input class="govuk-input govuk-!-width-two-thirds" type="search" id="cases-search" name="cases-search" spellcheck="false" aria-describedby="search-hint">
+                            <input class="govuk-input govuk-!-width-full" type="search" id="cases-search" name="cases-search" spellcheck="false" aria-describedby="search-hint">
                             <button class="govuk-button govuk-!-margin-bottom-0" data-module="govuk-button">
                                 <span class="govuk-visually-hidden">Search</span>
                             </button>
                         </div>
         
                     </div>
-                </div>
-            </div>
 
-            <div class="govuk-grid-row">
-                <div class="govuk-grid-column-two-thirds">
-                        <p class="govuk-body">9 cases matching keyword(s) <span class="govuk-!-font-weight-bold">Lorem, Consectetur</span>,<span class="opss-filter-txt"> using the current filters,</span> were found.
-                        </p>
-                </div>
+                </div>                    
+
                 <div class="govuk-grid-column-one-third">
                     <div class="govuk-form-group opss-text-align-right">
 
@@ -549,6 +545,14 @@
 
                         </div>
                 </div>
+            </div>
+
+            <div class="govuk-grid-row">
+                <div class="govuk-grid-column-full">
+                        <p class="govuk-body">9 cases matching keyword(s) <span class="govuk-!-font-weight-bold">Lorem, Consectetur, Etilee</span>,<span class="opss-filter-txt"> using the current filters,</span> were found.
+                        </p>
+                </div>
+
             </div>
 
             <div class="govuk-grid-row">
